fixed mobile alignments by removing margins from body and html, need to add desktop media queries

--- a/rpsls.css
+++ b/rpsls.css
@@ -24,8 +24,9 @@ body,
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
     padding: 0;
     background: var(--neutral-100);
     font-family: "Poppins", sans-serif;
@@ -33,14 +34,15 @@ body,
 
 #titleContainer {
     width: 100%;
+    max-width: 100%;
     padding: 3px;
     text-align: center;
     font-size: 10px;
 }
 
 #topContainer {
-    height: auto;
-    width: 100%;
+    height: 60%;
+    max-width: 100%;
     margin: 0;
     padding-top: 0;
 }
@@ -50,11 +52,14 @@ body,
     grid-template-areas:
         "player player vs vs comp comp"
         "pscore pscore pscore cscore cscore cscore";
+    grid-template-columns: 20% 20% 1fr 1fr 20% 20%;
     grid-template-rows: 65% 1fr;
+    height: 100%;
     justify-content: center;
     align-items: center;
     height: auto;
     width: 100%;
+    padding: 0 5px;
     background: var(--neutral-100);
 }
 
@@ -99,7 +104,7 @@ body,
     height: auto;
     width: 100%;
     max-width: 100vw;
-    padding: 0;
+    padding: 5px;
     background:var(--neutral-100);
 }
 
@@ -129,10 +134,13 @@ body,
     grid-area: vs;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 100%;
-    width: 10%;
+    width: 100%;
     margin: auto 0;
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 100%;
     font-size: 0.75rem;
     background: var(--neutral-100);
 }
